css/style.css
/*define the widths of divs*/
.container {
  margin: auto auto auto auto;
}

.row {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.col-1 {
  width: 8.33%;
}

.col-2 {
  width: 16.66%;
}

.col-3 {
  width: 25%;
}

.col-4 {
  width: 33.33%;
}

.col-5 {
  width: 41.66%;
}

.col-6 {
  width: 50%;
}

.col-7 {
  width: 58.33%;
}

.col-8 {
  width: 66.66%;
}

.col-9 {
  width: 75%;
}

.col-10 {
  width: 83.33%;
}

.col-11 {
  width: 91.66%;
}

.col-12 {
  width: 100%;
}

html {
  font-family: 'Noto Sans', sans-serif;
}

h2 {
  font-size: 100%;
}

h2, h3 {
  text-align: center;
  margin-top: 0;
  margin-bottom: 0;
}

#title {
  text-align: center;
  position: relative;
  top: -15px;
  font-family: 'Lora', serif;
  font-size: 160%;
}

/* Disable spinner for item input */
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.logo {
  position: relative;
  top: 18px;
  height: 50px;
  width: 50px;
}

.chooseShopHeader {
  margin-top: 10px;
  margin-bottom: 10px;
}

.checkboxes {
  margin-top: 10px;
  width: 70%;
  margin-left: auto;
  margin-right: auto;
}

.load {
  margin-top: 20px;
  margin-bottom: 10px;
}

ul {
  list-style-type: none;
}

li {
  margin-top: 5px;
  display: inline;
}

.item {
  width: 80%;
  margin: 0 auto;
  margin-top: 15px;
}

.printBtn {
  position: fixed;
  top: 5px;
  right: 0;
  z-index: 4;
}

.clean-gray-btn {
  background-color: #eeeeee;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #cccccc));
  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
  background-image: linear-gradient(top, #eeeeee, #cccccc);
  border: 1px solid #ccc;
  border-bottom: 1px solid #bbb;
  border-radius: 3px;
  color: #333;
  font: bold 11px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
  padding: 2px 5px;
  text-align: center;
  text-shadow: 0 1px 0 #eee;
  width: 150px;
  outline: none;
}

.clean-gray-btn:hover {
  background-color: #dddddd;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #bbbbbb));
  background-image: -webkit-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: -moz-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: -ms-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: -o-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: linear-gradient(top, #dddddd, #bbbbbb);
  border: 1px solid #bbb;
  border-bottom: 1px solid #999;
  cursor: pointer;
  text-shadow: 0 1px 0 #ddd;
}

.clean-gray-btn:active {
  border: 1px solid #aaa;
  border-bottom: 1px solid #888;
  -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
  box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
}

.clean-gray-btn-shop {
  font: bold 15px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
}

.clean-gray-btn-increment {
  width: 25px;
  height: 25px;
  margin-left: 5px;
}

table {
  border-collapse: collapse;
}

table, th, td {
    border: 1px solid black;
}

#loading {
  position: fixed;
  width: 95%;
  height: 100%;
  background: url('loading.gif') no-repeat center center;
}

.center {
  text-align: center;
}

#checkout {
  display: none;
  width: 20%;
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
}

#checkoutHeader {
  height: 60px;
}

#checkoutItems {
  overflow-y: auto;
}

.backToTop {
  position: fixed;
  bottom: 0;
  left: 0;
}

/* Packing slip stylving */
#packingSlip {
  display: none;
  margin-left: 40px;
  margin-right: 40px;
}

.packingName {
  text-align: right;
}

.packingTitle {
  position: relative;
  top: -15px;
  font-family: 'Lora', serif;
  font-size: 160%;
}

.packingRow {
  margin-bottom: 25px;
}

.packingP {
  margin-top: 0;
  margin-bottom: 0;
}

.packingTable {
  width: 100%;
}

.packingSign {
  margin-top: 50px;
}

@media screen and (min-width: 1000px) {
  /* Keeps the header and customer aditional details panel locked at the
      top of the screen*/
  .white {
    background-color: white;
    width: 100%;
    height: 130px;
    top: 0;
    right: 20%;
    position: fixed;
    z-index: 1;
  }

  #title {
    position: fixed;
    z-index: 2;
    background-color: white;
  }

  #customerDetails {
    position: fixed;
    left: 22.5%;
    right: 22.5%;
    top: 80px;
    z-index: 2;
    background-color: white;
  }

  #mainBody {
    position: relative;
    top: 140px;
  }

  nav {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
  }

  .shopList {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
  }

  .checkboxes {
    position: relative;
    left: 20px;
    width: 25%;
  }

  #checkout {
    display: inline;
    z-index: 3;
  }

  #orderForm {
    width: 80%;
  }

  .item {
    position: relative;
    left: 25%;
  }
}

@media print {
  .no-print {
    display: none;
  }

  #packingSlip {
    display: inline;
  }

  .break {
    page-break-after: always;
  }
}

